# otus-doxygen

./: .travis.yml  CMakeLists.txt  Doxyfile  print_ip.cpp  print_ip.h  test_print_ip.cpp
.github/workflows/: doxygen.yml  release.yml
html/: files.html  globals.html  globals_defs.html  globals_func.html  pretty_8h.html  pretty_8h__dep__incl.dot  pretty_8h_source.html  print__ip_8cpp.html  print__ip_8cpp__incl.dot  print__ip_8h.html  print__ip_8h__dep__incl.dot  print__ip_8h__incl.dot  print__ip_8h_source.html  test__print__ip_8cpp.html  test__print__ip_8cpp__incl.dot
html/search/: all_1.js  all_2.js  defines_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js
latex/: files.tex  pretty_8h.tex  pretty_8h.tex.tmp  pretty_8h__dep__incl.dot  print__ip_8cpp.tex  print__ip_8cpp__incl.dot  print__ip_8h.tex  print__ip_8h__dep__incl.dot  print__ip_8h__incl.dot  refman.tex  test__print__ip_8cpp.tex  test__print__ip_8cpp__incl.dot
